# Everybody-codes-hs

./: Everybody-codes-hs.cabal  README.md
app/: Main.hs
app/Quest01/: Solve.hs
app/Quest02/: Solve.hs
app/Quest03/: Solve.hs
app/Quest03/input/: part1  part2  part3
app/Quest04/: Solve.hs
app/Quest04/input/: part1  part2  part3
app/Quest05/: Solve.hs
app/Quest05/input/: part1  part2  part3
app/Quest06/: Solve.hs
app/Quest06/input/: part1  part2  part3
app/Quest07/: Solve.hs
app/Quest07/input/: part1  part1_sample  part2  part3
app/Quest08/: Solve.hs
app/Quest08/input/: part1
app/Quest09/: Solve.hs
app/Quest09/input/: part1  part2  part3
app/Quest10/: Solve.hs
app/Quest10/input/: part1  part2  part3
app/Quest11/: Solve.hs
app/Quest11/input/: part1  part2  part3
app/Quest12/: Solve.hs
app/Quest12/input/: part1  part2  part3
app/Quest13/: Solve.hs
app/Quest13/input/: part1  part2  part3
app/Quest14/: Solve.hs
app/Quest14/input/: part1  part2  part3
app/Quest15/: Solve.hs
app/Quest15/input/: part1  part2  part3
app/Quest16/: Solve.hs
app/Quest16/input/: part1  part2  part3
app/Quest17/: Solve.hs
app/Quest17/input/: part1  part2  part3
app/Quest18/: Solve.hs
app/Quest18/input/: part1  part2  part3
app/Quest19/: Solve.hs
app/Quest19/input/: part1  part2  part3
app/Quest20/: Solve.hs
app/Quest20/input/: part1  part2  part3
