cabal-version:      2.4
name:               Everybody-codes-hs
version:            0.1.0.0

license:            MIT
author:             Mykyta Cheshulko
maintainer:         chehhmann.nick@gmail.com

extra-source-files: CHANGELOG.md

executable Everybody-codes-hs
    main-is:          Main.hs

    other-modules:    Quest01.Solve,
                      Quest02.Solve,
                      Quest03.Solve,
                      Quest04.Solve,
                      Quest05.Solve
    build-depends:    base ^>=4.16.4.0,
                      array,
                      containers,
                      regex-tdfa,
                      split
    hs-source-dirs:   app
    ghc-options:      -fno-ignore-asserts
   
    default-language: Haskell2010
