cabal-version:      2.4
name:               Everybody-codes-hs
version:            0.1.0.0

license:            MIT
author:             Mykyta Cheshulko
maintainer:         chehhmann.nick@gmail.com

extra-source-files: CHANGELOG.md

executable Everybody-codes-hs
    main-is:          Main.hs

    other-modules:    Quest01.Solve,
                      Quest02.Solve,
                      Quest03.Solve,
                      Quest04.Solve,
                      Quest05.Solve,
                      Quest06.Solve,
                      Quest07.Solve,
                      Quest08.Solve,
                      Quest09.Solve,
                      Quest10.Solve,
                      Quest11.Solve,
                      Quest12.Solve,
                      Quest13.Solve,
                      Quest14.Solve,
                      Quest15.Solve,
                      Quest16.Solve,
                      Quest17.Solve
    build-depends:    base ^>=4.16.4.0,
                      array,
                      containers,
                      regex-tdfa,
                      split,
                      parallel
    hs-source-dirs:   app
    ghc-options:      -fno-ignore-asserts
                      -threaded
   
    default-language: Haskell2010
